# aiapget-cbt-app

./: .gitignore  AIAPGET_Questions.xlsx  Agadatantra.xlsx  Dravyaguna.xlsx  Kayachikitsa.xlsx  PROJECT_STATUS.md  Padartha VIjnana.xlsx  README.md  Rachana Sharira.xlsx  admin.py  admin_database.py  admin_students.py  aiapget.db  app.py  check_questions.py  check_students.py  config.txt  create_postgres_schema.py  dashboard.py  database.py  db_update_students.py  db_utils.py  developer_monitor.py  exam_db.py  export_schema.py  migrate_questions.py  questions.json  requirements.txt  samhita_tests.py  scores.csv  simple_test.py  student_dashboard.py  student_test.py  subject_tests.py  test_attempt_review.py  test_component.py  test_connection.py  test_dashboard_ui.py  test_review.py  test_tags.py  (+4 more)
.streamlit/: config.toml.bak
components/timer-component/: MANIFEST.in  README.md  example.py  pyproject.toml
components/timer-component/timer_component/: __init__.py  pyproject.toml
components/timer-component/timer_component.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
components/timer-component/timer_component/frontend/: package-lock.json  package.json
components/timer-component/timer_component/frontend/src/: MyComponent.tsx  index.tsx
data/: AIAPGET_Questions.xlsx  Agadatantra.xlsx  Samhita Adhyayana 2.xlsx
migration/: migrate_to_postgres.py  reset_sequences.py  verify_migration.py
pages/: attempt_review.py  my_results.py  result.py  review.py
pages/exam/: my_results.py  (+1 more)
questions/: Samhita Adhyayana 1.json  padartha_vijnana.json
uitimer/: timer_ui.py
(+7 files in other folders)
