[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timer-component"
version = "0.0.1"
description = "[6/8] description:"
readme = "README.md"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "santhosh", email = "john@example.com" }]
dependencies = ["streamlit >= 1.51"]

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools.packages.find]
include = ["timer_component*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
timer_component = ["frontend/build/**/*", "pyproject.toml"]
